# modelset-py

./: .gitignore  CONTRIBUTING.md  README.md  requirements.txt  setup.cfg  setup.py
examples/: train_nn_model_classification.py  train_svm_model_tagging.py
src/modelset/: __init__.py  dataset.py  deduplication.py  downloader.py  word2vec.py
tests/: test_dataset.py  test_word2vec.py
upload_hg/: generate_json_files.py  test_hg.py
