[metadata]
name = modelset-ml2
version = 0.0.1
author = jesusc
author_email = jesusc@um.es
description = A dataset for models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/modelset/modelset-libpy
project_urls =
    Bug Tracker = https://github.com/modelset/modelset-libpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
